# retrosheet-buddy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
outputs/: CAL199309170.EVN
retrosheet_buddy/: __init__.py  constants.py  editor.py  main.py  models.py  parser.py  writer.py
sample_data/: CAL199309170.EVN  SDN198205020.EVN
test_outputs/: ATL198304080.EVN  TEST001.EVN  TEST002.EVN  TEST003.EVN  TEST004.EVN  TEST005.EVN
tests/: __init__.py  test_auto_walk_strikeout.py  test_ball_in_play_x.py  test_base_running_events.py  test_count_calculation.py  test_detail_mode.py  test_hit_location.py  test_jump_to_play.py  test_keystrokes_simple.py  test_navigation_conflicts.py  test_next_incomplete_play.py  test_normal_pitch_recording.py  test_out_functionality.py  test_parser.py  test_pickoff.py  test_pickoff_attempt.py  test_retains_sub_and_data_on_save.py  test_retrosheet_compliance.py  test_runner_advances_after_hit_location.py  test_sacrifice_plays.py  test_tab_cycling.py  test_undo_pitch_mode.py
